[package]
name = "vrc"
version = "0.0.0-alpha.1"
edition = "2021"
license = "MPL-2.0"
authors = ["ljoonal"]
description = "Unofficial rust types of VRChat's API"
repository = "https://github.com/onlivfe/vrc_rs"
documentation = "https://docs.rs/vrc"
keywords = ["vrc", "vrchat", "api", "rest"]
categories = ["api-bindings", "games"]

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "vrc"
path = "src/lib.rs"

[features]

default = []
api_client = ["reqwest", "governor", "percent-encoding", "base64", "async-trait"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.1", features = ["time_0_3"] }
time = { version = "0.3", default-features = false, features = [
	"serde-well-known",
] }
serde_json = { version = "1" }
strum = { version = "0.24", features = ["derive"] }

# API client specifics
racal = { version = "0.3.1", features = ["reqwest"] }
#racal = { path = "../racal", features = ["reqwest"] }
governor = { version = "0.5", optional = true }
tokio = { version = "1", optional = true}
percent-encoding  = { version = "2.2", optional = true}
base64  = { version = "0.21", optional = true}

async-trait = { version = "0.1", optional = true }
[dependencies.reqwest]
optional = true
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros"]}
once_cell = "1.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
